--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -5362,7 +5362,7 @@ small {
 }
 
 .card .card-title {
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 300;
 }
 
@@ -5520,6 +5520,12 @@ small {
   padding: 24px;
 }
 
+.card .card-content-image {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: scroll;
+  background-size: cover;
+}
 .card .card-content {
   padding: 24px;
 }
