--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -144,9 +144,7 @@ time {
 }
 .not-found > i.material-icons:nth-of-type(1),
 .not-found > i.material-icons:nth-of-type(2) {
-  background: -webkit-linear-gradient(#fff, #c6c6c6);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  color: #e9e9e9;
 }
 .not-found > i.material-icons:nth-of-type(1) {
   -webkit-transform: translate(80%, 20%);
