--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -4,6 +4,29 @@
  * MIT License (https://raw.githubusercontent.com/Dogfalo/materialize/master/LICENSE)
  */
 
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/materialicons/v41/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format('woff2');
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -moz-font-feature-settings: 'liga';
+  -moz-osx-font-smoothing: grayscale;
+}
+
 .window-size {
   position: fixed;
   top: auto;
@@ -3425,6 +3448,11 @@ td, th {
   padding: 1.2rem 2rem;
   margin: 0;
 }
+.collection.collection-bordered .collection-item + .collection-item {
+  border-width: 1px 0 0 0;
+  border-style: solid;
+  border-color: #f0f0f0;
+}
 .collection .collection-item > i.material-icons {
   width: 48px;
   font-size: 32px;
@@ -3477,10 +3505,6 @@ td, th {
   position: absolute;
   top: 16px;
   right: 16px;
-}
-
-.collection .collection-item:last-child {
-  border-bottom: none;
 }
 
 .collection .collection-item.active {
@@ -5607,9 +5631,6 @@ small {
 .card > .collection {
   border-width: 0;
   margin: 0;
-}
-.card > .collection > .collection-item {
-  border-width: 0;
 }
 
 .card.card-unstyled {
@@ -10428,8 +10449,8 @@ body.module-search-active > .search-wrapper {
   position: fixed;
 
   top: auto;
-  right: 2rem;
-  bottom: 2rem;
+  right: 24px;
+  bottom: 6rem;
   left: auto;
 
   z-index: 99999;
@@ -10448,4 +10469,13 @@ body.module-search-active > .search-wrapper {
 
 .push-notifications > .notification > .card > .card-content > .card-title > .material-icons {
   margin: 0 .4rem 0 0;
+}
+
+/*
+ * WildCard
+ */
+.wildcard {
+  position: relative;
+  margin: -1rem 0 1rem 0;
+  background-color: #fff;
 }
