--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -10417,6 +10417,9 @@ ul.partners > li.partner {
  * Arama
  */
 .search-wrapper {
+  -webkit-transition: all 400ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+          transition: all 400ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+
   position: fixed;
   top: 0;
   right: 0;
@@ -10426,7 +10429,8 @@ ul.partners > li.partner {
 
   padding: 10% 20%;
   background-color: rgba(255, 255, 255, .9);
-  display: none;
+  visibility: hidden;
+  opacity: 0;
 
   overflow: auto;
 }
@@ -10439,7 +10443,8 @@ body.module-search-active {
   overflow: hidden;
 }
 body.module-search-active > .search-wrapper {
-  display: initial;
+  visibility: visible;
+  opacity: 1;
 }
 
 /*
