--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -9211,9 +9211,9 @@ input[type=range].focused:focus:not(.active)::-ms-thumb {
   overflow: hidden;
   position: relative;
   width: 100%;
-  height: 400px;
-  -webkit-perspective: 500px;
-          perspective: 500px;
+  height: 240px;
+  -webkit-perspective: 400px;
+          perspective: 400px;
   -webkit-transform-style: preserve-3d;
           transform-style: preserve-3d;
   -webkit-transform-origin: 0% 50%;
@@ -9240,33 +9240,84 @@ input[type=range].focused:focus:not(.active)::-ms-thumb {
 .carousel.carousel-slider .carousel-item {
   width: 100%;
   height: 100%;
-  min-height: 400px;
+  min-height: 240px;
   position: absolute;
   top: 0;
   left: 0;
+
+  display: none;
+
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+.carousel.carousel-slider .carousel-item.active {
+  display: initial;
+}
+
+@keyframes carousel-anim {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes carousel-anim {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+.carousel.carousel-slider > .carousel-item > .anim {
+  position: absolute;
+  z-index: -1;
+
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+
+  width: 100%;
+  height: 240px;
+
+  margin: 0 auto;
+
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+
+  -webkit-animation-name: carousel-anim;
+  -webkit-animation-duration: 60s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+}
+.carousel.carousel-slider > .carousel-item > .anim.sphere-1 {
+    background-image: url(../img/sphere-1.png);
+}
+.carousel.carousel-slider > .carousel-item > .anim.sphere-2 {
+    background-image: url(../img/sphere-2.png);
+}
+.carousel.carousel-slider > .carousel-item > .anim.sphere-3 {
+    background-image: url(../img/sphere-3.png);
+}
+.carousel.carousel-slider > .carousel-item > .anim.sphere-4 {
+    background-image: url(../img/sphere-4.png);
 }
 
 .carousel.carousel-slider .carousel-item h2 {
   font-size: 24px;
-  font-weight: 500;
-  line-height: 32px;
+  opacity: .6;
 }
 
 .carousel.carousel-slider .carousel-item p {
-  font-size: 15px;
-}
-
-.carousel .carousel-item {
-  visibility: hidden;
-  width: 200px;
-  height: 200px;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.carousel .carousel-item > img {
-  width: 100%;
+  font-size: 16px;
+  opacity: .6;
 }
 
 .carousel .indicators {
