--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -81,12 +81,24 @@
   bottom: 0;
   left: 0;
   z-index: 9999999;
-  background-color: rgba(255, 255, 255, .8);
+  background-color: rgba(255, 0, 0, .8);
+  color: #fff;
   text-align: center;
   display: none;
+  padding: 2rem;
+
+          transition: all 400ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  -webkit-transition: all 400ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+
+          transform: translateY(90%);
+  -webkit-transform: translateY(90%);
+}
+.window-size:hover {
+          transform: translateY(0%);
+  -webkit-transform: translateY(0%);
 }
 .window-size > p {
-  padding: 1rem;
+  margin: 0;
 }
 
 @media (max-width: 700px) {
@@ -778,7 +790,6 @@ table.invoice tfoot > tr {
   background-position: center;
   background-attachment: scroll;
   background-size: cover;
-  border-radius: 2px 2px 0 0;
 }
 
 .card.card-unstyled {
@@ -964,8 +975,6 @@ body.module-search-active > .search-wrapper {
   height: 4.6rem;
 
   margin: 0 0 1rem;
-
-  border-radius: .2rem;
 
   box-shadow: .1rem .1rem .4rem 0 rgba(0, 0, 0, .1);
 }
@@ -1168,7 +1177,7 @@ header#main > .parallax-container > .parallax > video#background-video {
   min-width: 240px;
   max-width: 340px;
 
-  margin: 0 0 0 1rem;
+  margin: 0 0 1rem 1rem;
 
           transition: all 0.25s cubic-bezier(0.25, 0.46, 0.45, 0.94);
   -webkit-transition: all 0.25s cubic-bezier(0.25, 0.46, 0.45, 0.94);
@@ -1179,12 +1188,12 @@ header#main > .parallax-container > .parallax > video#background-video {
 }
 
 #dock-content > .menu > .collection > a.collection-item:hover {
-  background-color: rgba(0, 0, 0, .1);
+  background-color: rgba(255, 255, 255, .1);
 }
 
 #dock-content > .menu > .collection > a.collection-item.active {
-          box-shadow: inset 4px 0 0 0 #009688;
-  -webkit-box-shadow: inset 4px 0 0 0 #009688;
+          box-shadow: inset 1rem 0 0 0 #009688;
+  -webkit-box-shadow: inset 1rem 0 0 0 #009688;
 
   background-color: transparent;
 }
@@ -1208,6 +1217,8 @@ header#main > .parallax-container > .parallax > video#background-video {
     left: auto;
 
     z-index: 10;
+
+    margin: 0;
 
     background-color: #e9e9e9;
 
@@ -1585,7 +1596,6 @@ nav .nav-wrapper > ul > li > a > i {
   margin: 0 0 1rem;
   background-color: transparent;
   border-width: 0;
-  border-radius: 0;
 }
 
 .collection > .collection-header {
@@ -1593,11 +1603,10 @@ nav .nav-wrapper > ul > li > a > i {
 }
 
 .collection > .collection-item {
-  padding: 12px 24px;
+  padding: 16px 24px;
   margin: 0;
   background-color: transparent;
   border-width: 0;
-  border-radius: 0;
 }
 
 .collection > .collection-item.active{
@@ -1619,7 +1628,7 @@ nav .nav-wrapper > ul > li > a > i {
  * divider
  */
 .divider {
-  margin: 0 !important;
+  margin: .5rem 0 !important;
 }
 
 /*
@@ -1811,12 +1820,38 @@ table tr {
  */
 .rank {
   display: inline-block;
-  width: 32px;
   height: 32px;
   line-height: 32px;
-  text-align: center;
   white-space: nowrap;
   border-radius: 50%;
   margin: 0 .4rem 0 0;
+  padding: 0 1rem;
   font-size: 16px;
+}
+
+/*
+ * reset radius
+ */
+.pagination li,
+.collection,
+span.badge.new,
+.card-panel,
+.card,
+.card.horizontal .card-image img,
+.card .card-image img,
+.card .card-content,
+.card .card-action:last-child,
+.toast,
+.material-tooltip,
+.btn:not(.btn-floating),
+.btn-large:not(.btn-floating),
+.btn-small:not(.btn-floating),
+.btn-flat:not(.btn-floating),
+.modal,
+.modal .modal-footer,
+select,
+.pagination li,
+td,
+th {
+  border-radius: 0 !important;
 }
