--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -81,8 +81,7 @@
   bottom: 0;
   left: 0;
   z-index: 9999999;
-  background-color: rgba(255, 0, 0, .8);
-  color: #fff;
+  background-color: rgba(255, 255, 255, .8);
   text-align: center;
   display: none;
   padding: 2rem;
@@ -566,6 +565,19 @@ time {
   font-size: 16px;
 }
 
+.not-found.small {
+  margin: 0 auto .5rem;
+}
+.not-found.small > i.material-icons:nth-of-type(1) {
+  font-size: 1rem;
+}
+.not-found.small > i.material-icons:nth-of-type(2) {
+  font-size: 3rem;
+}
+.not-found.small > i.material-icons:nth-of-type(3) {
+  font-size: 2rem;
+}
+
 /*
  * alerts
  */
@@ -601,6 +613,9 @@ time {
 /*
  * reset
  */
+body {
+  overflow-x: hidden;
+}
 body * {
     font-family: 'gt-eesti', sans-serif;
 }
@@ -927,8 +942,8 @@ table.invoice tfoot > tr {
  * search
  */
 .search-wrapper {
-          transition: all 400ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-  -webkit-transition: all 400ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+          transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  -webkit-transition: all 200ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
 
   position: fixed;
   top: 0;
@@ -937,17 +952,34 @@ table.invoice tfoot > tr {
   left: 0;
   z-index: 100000;
 
-  padding: 10% 20%;
-  visibility: hidden;
-  opacity: 0;
+  padding: 5% 20%;
 
   overflow: auto;
 
-  background-image: url(../img/main_bg.jpg);
-  background-repeat: repeat;
+  background: #333;
+  background:         linear-gradient(45deg, #000000 0%, #009688 100%);
+  background:    -moz-linear-gradient(45deg, #000000 0%, #009688 100%);
+  background: -webkit-linear-gradient(45deg, #000000 0%, #009688 100%);
+
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#2488d5', GradientType=1 );
+
+  background-repeat: no-repeat;
+  background-size: cover;
   background-attachment: scroll;
 
-  background-color: #ccc;
+          transform: translateY(-100%);
+  -webkit-transform: translateY(-100%);
+
+  visibility: hidden;
+}
+
+.search-wrapper .input-field > .material-icons { color: #009688; }
+.search-wrapper .input-field > input {
+  color: #009688;
+  border-color: #009688;
+}
+.search-wrapper .input-field > label {
+  color: #009688;
 }
 
 @media (max-width: 1024px) {
@@ -956,17 +988,14 @@ table.invoice tfoot > tr {
   }
 }
 
-.search-wrapper > .search-content > input[type=search] {
-  background-color: #fff;
-  padding: 1rem;
-}
-
 body.module-search-active {
   overflow: hidden;
 }
 body.module-search-active > .search-wrapper {
+          transform: translateY(0);
+  -webkit-transform: translateY(0);
+
   visibility: visible;
-  opacity: 1;
 }
 
 /*
@@ -987,6 +1016,8 @@ body.module-search-active > .search-wrapper {
       flex: 1 1 auto;
 
   width: 25%;
+
+  color: #fff;
 }
 
 /*
@@ -1149,7 +1180,7 @@ main {
  * footer
  */
 footer.page-footer {
-  background-color: #fff;
+  background-color: #e9e9e9;
   background-image: url(../img/bg-1.svg);
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -1220,8 +1251,7 @@ header#main > .parallax-container > .parallax > video#background-video {
   flex-grow: 1;
 }
 #dock-content > .menu {
-  min-width: 240px;
-  max-width: 340px;
+  width: 240px;
 
   margin: 0 0 1rem 1rem;
 
@@ -1266,12 +1296,12 @@ header#main > .parallax-container > .parallax > video#background-video {
 
     margin: 0;
 
-    background-color: #e9e9e9;
+    background-color: #f0f0f0;
 
-    padding: 24px;
+    padding: 12px 24px 0;
 
-            transform: translateX(288px);
-    -webkit-transform: translateX(288px);
+            transform: translateX(240px);
+    -webkit-transform: translateX(240px);
 
     overflow-x: auto;
   }
@@ -1649,7 +1679,7 @@ nav .nav-wrapper > ul > li > a > i {
 }
 
 .collection > .collection-item {
-  padding: 16px 24px;
+  padding: 12px 24px;
   margin: 0;
   background-color: transparent;
   border-width: 0;
