--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -1,4 +1,4 @@
-/*
+/**
  * fonts
  */
 @font-face {
@@ -45,15 +45,9 @@
   font-style: italic
 }
 
-/*
+/**
  * font-face
  */
-@font-face {
-  font-family: 'Material Icons';
-  font-style: normal;
-  font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/materialicons/v41/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format('woff2');
-}
 
 .material-icons {
   font-family: 'Material Icons';
@@ -71,7 +65,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-/*
+/**
  * window size
  */
 .window-size {
@@ -106,7 +100,7 @@
   }
 }
 
-/*
+/**
  * moz-selection
  */
 ::-moz-selection {
@@ -118,14 +112,14 @@
   color: rgba(0, 0, 0, .2);
 }
 
-/*
+/**
  * time
  */
 time {
   font-size: 14px;
 }
 
-/*
+/**
  * displays
  */
 .d-none {
@@ -176,6 +170,11 @@ time {
   flex-wrap: nowrap !important;
 }
 
+.flex-column {
+  -ms-flex-direction: column !important;
+  flex-direction: column !important;
+}
+
 .d-inline-flex {
   display: -ms-inline-flexbox !important;
   display: inline-flex !important;
@@ -224,6 +223,10 @@ time {
 .mr-auto,
 .mx-auto {
   margin-right: auto;
+}
+
+.m-0 {
+  margin: 0;
 }
 
 .mb-0 {
@@ -338,7 +341,7 @@ time {
   border-radius: 0 !important;
 }
 
-/*
+/**
  * animations
  */
 @keyframes cloud-animation-1 {
@@ -514,7 +517,7 @@ time {
   to { -webkit-transform: rotate(360deg); }
 }
 
-/*
+/**
  * list not found
  */
 .not-found {
@@ -578,7 +581,7 @@ time {
   font-size: 2rem;
 }
 
-/*
+/**
  * alerts
  */
 .rush-alert {
@@ -610,7 +613,7 @@ time {
   font-size: 16px;
 }
 
-/*
+/**
  * reset
  */
 body {
@@ -696,7 +699,7 @@ table.invoice tfoot > tr {
   border-color: rgba(0, 0, 0, .1);
 }
 
-/*
+/**
  * helpers
  */
 .rotate {
@@ -727,7 +730,7 @@ table.invoice tfoot > tr {
   -webkit-animation-timing-function: linear;
 }
 
-/*
+/**
  * breadcrumb
  */
 #breadcrumb {
@@ -768,13 +771,25 @@ table.invoice tfoot > tr {
   color: #fff;
 }
 
-/*
+@media (max-width: 1024px) {
+  #breadcrumb {
+    display: none;
+  }
+}
+
+/**
  * cards
  */
 .wildcard {
   position: relative;
   margin: -1rem 0 1rem 0;
   background-color: #fff;
+}
+.wildcard .wildcard-title {
+  margin: 0;
+  padding: 64px 0 32px;
+  display: table;
+  font-size: 32px;
 }
 
 .card {
@@ -783,6 +798,9 @@ table.invoice tfoot > tr {
 
 .card .card-title {
   margin: 0;
+}
+.card .card-title.card-title-small {
+  font-size: 20px;
 }
 
 .card .card-image {
@@ -880,7 +898,7 @@ table.invoice tfoot > tr {
   margin: 0 1rem 0 0;
 }
 
-/*
+/**
  * item group
  */
 
@@ -909,7 +927,7 @@ table.invoice tfoot > tr {
   }
 }
 
-/*
+/**
  * push notifications
  */
 .push-notifications {
@@ -938,7 +956,7 @@ table.invoice tfoot > tr {
   margin: 0 .4rem 0 0;
 }
 
-/*
+/**
  * search
  */
 .search-wrapper {
@@ -998,7 +1016,7 @@ body.module-search-active > .search-wrapper {
   visibility: visible;
 }
 
-/*
+/**
  * module search results
  */
 #ms-results {
@@ -1020,7 +1038,7 @@ body.module-search-active > .search-wrapper {
   color: #fff;
 }
 
-/*
+/**
  * recaptcha
  */
 .captcha {
@@ -1048,7 +1066,7 @@ body.module-search-active > .search-wrapper {
   left: -.2rem;
 }
 
-/*
+/**
  * fast menu
  */
 .fast-menu {
@@ -1076,7 +1094,7 @@ body.module-search-active > .search-wrapper {
   }
 }
 
-/*
+/**
  * partners
  */
 ul.partners {
@@ -1109,7 +1127,7 @@ ul.partners > li.partner a:hover {
   -webkit-filter: grayscale(0);
 }
 
-/*
+/**
  * team
  */
 #team > .item {
@@ -1143,14 +1161,14 @@ ul.partners > li.partner a:hover {
   align-self: center;
 }
 
-/*
+/**
  * features
  */
 #features > .item {
   padding: 1rem;
 }
 
-/*
+/**
  * more step
  */
 #more-step {
@@ -1163,7 +1181,7 @@ ul.partners > li.partner a:hover {
   margin: 4rem 0;
 }
 
-/*
+/**
  * main
  */
 main {
@@ -1176,7 +1194,7 @@ main {
   background-color: #ccc;
 }
 
-/*
+/**
  * footer
  */
 footer.page-footer {
@@ -1193,7 +1211,7 @@ footer.page-footer .footer-copyright {
   background-color: rgba(255, 255, 255, .6);
 }
 
-/*
+/**
  * parallax
  */
 .parallax-container {
@@ -1201,7 +1219,7 @@ footer.page-footer .footer-copyright {
   padding: 6rem 0;
 }
 
-/*
+/**
  * header
  */
 header#main {
@@ -1236,7 +1254,7 @@ header#main > .parallax-container > .parallax > video#background-video {
   min-height: 100%;
 }
 
-/*
+/**
  * dock
  */
 #dock-content {
@@ -1252,6 +1270,7 @@ header#main > .parallax-container > .parallax > video#background-video {
 }
 #dock-content > .menu {
   width: 240px;
+  min-width: 240px;
 
   margin: 0 0 1rem 1rem;
 
@@ -1268,8 +1287,8 @@ header#main > .parallax-container > .parallax > video#background-video {
 }
 
 #dock-content > .menu > .collection > a.collection-item.active {
-          box-shadow: inset 1rem 0 0 0 #009688;
-  -webkit-box-shadow: inset 1rem 0 0 0 #009688;
+          box-shadow: inset 1rem 0 0 0 #009688 !important;
+  -webkit-box-shadow: inset 1rem 0 0 0 #009688 !important;
 
   background-color: transparent;
 }
@@ -1296,12 +1315,13 @@ header#main > .parallax-container > .parallax > video#background-video {
 
     margin: 0;
 
-    background-color: #f0f0f0;
+    background-color: rgba(150, 150, 150, .9);
 
-    padding: 12px 24px 0;
+    width: 264px;
+    padding: 12px 12px 0;
 
-            transform: translateX(240px);
-    -webkit-transform: translateX(240px);
+            transform: translateX(264px);
+    -webkit-transform: translateX(264px);
 
     overflow-x: auto;
   }
@@ -1339,7 +1359,11 @@ header#main > .parallax-container > .parallax > video#background-video {
   }
 
   #dock-content > .menu > .collection {
-    margin: 1rem 0;
+    margin: 0 0 12px;
+    background-color: #fff;
+
+            box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
   }
 
   .dock-menu {
@@ -1353,7 +1377,7 @@ header#main > .parallax-container > .parallax > video#background-video {
   }
 }
 
-/*
+/**
  * step
  */
 .step-title:before {
@@ -1404,7 +1428,7 @@ header#main > .parallax-container > .parallax > video#background-video {
   color: #8bc34a;
 }
 
-/*
+/**
  * carousel
  */
 .carousel {
@@ -1492,14 +1516,14 @@ header#main > .parallax-container > .parallax > video#background-video {
   left: -64px;
 }
 
-/*
+/**
  * alert
  */
 .alert {
   padding: 24px;
 }
 
-/*
+/**
  * card loader
  */
 .card-panel.card-loader {
@@ -1511,7 +1535,7 @@ header#main > .parallax-container > .parallax > video#background-video {
   -webkit-user-select: none;
 }
 
-/*
+/**
  * sidenav
  */
 .sidenav .user-view {
@@ -1567,7 +1591,7 @@ header#main > .parallax-container > .parallax > video#background-video {
     align-self: center;
 }
 
-/*
+/**
  * fixed layout
  */
 .sidenav-fixed-layout {
@@ -1583,7 +1607,7 @@ header#main > .parallax-container > .parallax > video#background-video {
   }
 }
 
-/*
+/**
  * nav logo
  */
 nav .brand-logo {
@@ -1606,7 +1630,7 @@ nav .brand-logo > img {
   }
 }
 
-/*
+/**
  * nav
  */
 nav .nav-wrapper > ul > li {
@@ -1638,7 +1662,7 @@ nav .nav-wrapper > ul > li > a > i {
   }
 }
 
-/*
+/**
  * utilityies
  */
 .hide {
@@ -1665,7 +1689,7 @@ nav .nav-wrapper > ul > li > a > i {
   float: right !important;
 }
 
-/*
+/**
  * collection
  */
 .collection {
@@ -1700,14 +1724,15 @@ nav .nav-wrapper > ul > li > a > i {
   }
 }
 
-/*
+/**
  * divider
  */
 .divider {
   margin: .5rem 0 !important;
+  background-color: rgba(200, 200, 200, .2) !important;
 }
 
-/*
+/**
  * collapsible
  */
 .collapsible {
@@ -1768,14 +1793,14 @@ nav .nav-wrapper > ul > li > a > i {
   -webkit-box-shadow: none !important;
 }
 
-/*
+/**
  * table
  */
 table tr {
   border-width: 0;
 }
 
-/*
+/**
  * btn
  */
 .btn-large:hover {
@@ -1792,7 +1817,7 @@ table tr {
   background-size: 50%;
 }
 
-/*
+/**
  * modal
  */
 .modal {
@@ -1802,7 +1827,17 @@ table tr {
 }
 .modal .modal-content {
   padding: 0;
-  background-color: #f6f6f6;
+
+  background: #333;
+  background:         linear-gradient(45deg, #cccccc 0%, #ffffff 100%);
+  background:    -moz-linear-gradient(45deg, #cccccc 0%, #ffffff 100%);
+  background: -webkit-linear-gradient(45deg, #cccccc 0%, #ffffff 100%);
+
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cccccc', endColorstr='#ffffff', GradientType=1 );
+
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: scroll;
 }
 .modal .modal-content > .modal-title {
   padding: 24px;
@@ -1811,6 +1846,7 @@ table tr {
 .modal .modal-content > .modal-body {
   overflow: auto;
   max-height: 300px;
+  margin: 0 1rem;
   padding: 12px 24px;
   background-color: #fff;
 }
@@ -1840,7 +1876,7 @@ table tr {
   background-color: transparent;
 }
 
-/*
+/**
  * box-shadow
  */
 .sidenav {
@@ -1848,14 +1884,14 @@ table tr {
           box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
 }
 
-/*
+/**
  * progress
  */
 .progress {
   margin: 0;
 }
 
-/*
+/**
  * dropdown
  */
 .dropdown-content {
@@ -1865,7 +1901,7 @@ table tr {
   color: #666;
 }
 
-/*
+/**
  * grid
  */
 .row {
@@ -1874,7 +1910,7 @@ table tr {
   margin-bottom: 24px;
 }
 
-/*
+/**
  * card deck
  */
 .deck {
@@ -1891,7 +1927,7 @@ table tr {
   min-width: 20%;
 }
 
-/*
+/**
  * rank
  */
 .rank {
@@ -1905,7 +1941,7 @@ table tr {
   font-size: 16px;
 }
 
-/*
+/**
  * reset radius
  */
 .pagination li,
@@ -1930,4 +1966,33 @@ select,
 td,
 th {
   border-radius: 0 !important;
+}
+
+/**
+ * pagination
+ */
+.pagination.pagination-in {
+  margin: 1rem 0 0;
+}
+.pagination.pagination-in li {
+  height: 16px;
+  line-height: 1;
+}
+
+.pagination.pagination-in li a {
+  font-size: 1rem;
+  padding: 0 6px;
+  line-height: 16px;
+}
+
+/**
+ * character counter
+ */
+.character-counter {
+  min-height: 16px;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  right: 0;
+  float: none;
 }
