--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -48,7 +48,6 @@
 /**
  * font-face
  */
-
 .material-icons {
   font-family: 'Material Icons';
   font-weight: normal;
@@ -968,12 +967,12 @@ table.invoice tfoot > tr {
 
   overflow: auto;
 
-  background: #38ADAE;
-  background:         linear-gradient(45deg, #38ADAE 0%, #f000ff 100%);
-  background:    -moz-linear-gradient(45deg, #38ADAE 0%, #f000ff 100%);
-  background: -webkit-linear-gradient(45deg, #38ADAE 0%, #f000ff 100%);
+  background: #333;
+  background:         linear-gradient(45deg, #333 0%, #38ADAE 100%);
+  background:    -moz-linear-gradient(45deg, #333 0%, #38ADAE 100%);
+  background: -webkit-linear-gradient(45deg, #333 0%, #38ADAE 100%);
 
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#38ADAE', endColorstr='#f000ff', GradientType=1 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#333', endColorstr='#38ADAE', GradientType=1 );
 
   background-repeat: no-repeat;
   background-size: cover;
@@ -1035,6 +1034,15 @@ body.module-search-active > .search-wrapper {
 }
 #ms-results > .ms-item.active {
   background-color: rgba(0, 0, 0, .1);
+}
+#ms-results > .ms-item > .material-icons {
+  font-size: 48px;
+}
+
+@media (max-width: 1024px) {
+  #ms-results > .ms-item > .material-icons {
+    font-size: 24px;
+  }
 }
 
 /**
@@ -1901,8 +1909,8 @@ ul#slide-out li > .collapsible-body {
  * box-shadow
  */
 .sidenav {
-  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
           box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
 }
 
 /**
