--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -1866,7 +1866,7 @@ table tr {
  */
 .modal {
   overflow-y: hidden;
-  max-height: 100%;
+  max-height: 100% !important;
   background-color: transparent;
 }
 .modal .modal-content {
