--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -128,238 +128,6 @@ time {
 }
 
 /**
- * displays
- */
-.d-none {
-  display: none !important;
-}
-
-.d-inline {
-  display: inline !important;
-}
-
-.d-inline-block {
-  display: inline-block !important;
-}
-
-.d-block {
-  display: block !important;
-}
-
-.d-table {
-  display: table !important;
-}
-
-.d-table-row {
-  display: table-row !important;
-}
-
-.d-table-cell {
-  display: table-cell !important;
-}
-
-.d-flex {
-  display: -ms-flexbox !important;
-  display: flex !important;
-}
-
-.flex-fill {
-  -ms-flex: 1 1 auto !important;
-  flex: 1 1 auto !important;
-}
-
-.flex-wrap {
-  -ms-flex-wrap: wrap !important;
-  flex-wrap: wrap !important;
-}
-
-.flex-nowrap {
-  -ms-flex-wrap: nowrap !important;
-  flex-wrap: nowrap !important;
-}
-
-.flex-column {
-  -ms-flex-direction: column !important;
-  flex-direction: column !important;
-}
-
-.d-inline-flex {
-  display: -ms-inline-flexbox !important;
-  display: inline-flex !important;
-}
-
-.justify-content-start {
-    -ms-flex-pack: start;
-    justify-content: flex-start;
-}
-
-.justify-content-end {
-    -ms-flex-pack: end;
-    justify-content: flex-end;
-}
-
-.justify-content-center {
-    -ms-flex-pack: center;
-    justify-content: center;
-}
-
-.justify-content-between {
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-}
-
-.justify-content-around {
-    -ms-flex-pack: distribute;
-    justify-content: space-around;
-}
-
-.align-self-center {
-  -ms-flex-item-align: center !important;
-  align-self: center !important;
-}
-
-.align-items-end {
-    -ms-flex-align: end;
-    align-items: flex-end;
-}
-
-.ml-auto,
-.mx-auto {
-  margin-left: auto;
-}
-
-.mr-auto,
-.mx-auto {
-  margin-right: auto;
-}
-
-.m-0 {
-  margin: 0;
-}
-
-.mb-0 {
-  margin-bottom: 0 !important;
-}
-.mb-1 {
-  margin-bottom: 1rem !important;
-}
-.mb-2 {
-  margin-bottom: 2rem !important;
-}
-
-.mt-0 {
-  margin-top: 0 !important;
-}
-.mt-1 {
-  margin-top: 1rem !important;
-}
-.mt-2 {
-  margin-top: 2rem !important;
-}
-
-.ml-0 {
-  margin-left: 0 !important;
-}
-.ml-1 {
-  margin-left: 1rem !important;
-}
-.ml-2 {
-  margin-left: 2rem !important;
-}
-
-.mr-0 {
-  margin-right: 0 !important;
-}
-.mr-1 {
-  margin-right: 1rem !important;
-}
-.mr-2 {
-  margin-right: 2rem !important;
-}
-
-.p-0 {
-  padding: 0 !important;
-}
-.p-1 {
-  padding: 1rem !important;
-}
-.p-2 {
-  padding: 2rem !important;
-}
-
-.pb-0 {
-  padding-bottom: 0 !important;
-}
-.pb-1 {
-  padding-bottom: 1rem !important;
-}
-.pb-2 {
-  padding-bottom: 2rem !important;
-}
-
-.pt-0 {
-  padding-top: 0 !important;
-}
-.pt-1 {
-  padding-top: 1rem !important;
-}
-.pt-2 {
-  padding-top: 2rem !important;
-}
-
-.pl-0 {
-  padding-left: 0 !important;
-}
-.pl-1 {
-  padding-left: 1rem !important;
-}
-.pl-2 {
-  padding-left: 2rem !important;
-}
-
-.pr-0 {
-  padding-right: 0 !important;
-}
-.pr-1 {
-  padding-right: 1rem !important;
-}
-.pr-2 {
-  padding-right: 2rem !important;
-}
-
-.rounded {
-  border-radius: 0.25rem;
-}
-
-.rounded-top {
-  border-top-left-radius: 0.25rem;
-  border-top-right-radius: 0.25rem;
-}
-
-.rounded-right {
-  border-top-right-radius: 0.25rem;
-  border-bottom-right-radius: 0.25rem;
-}
-
-.rounded-bottom {
-  border-bottom-right-radius: 0.25rem;
-  border-bottom-left-radius: 0.25rem;
-}
-
-.rounded-left {
-  border-top-left-radius: 0.25rem;
-  border-bottom-left-radius: 0.25rem;
-}
-
-.rounded-circle {
-  border-radius: 50%;
-}
-
-.rounded-0 {
-  border-radius: 0 !important;
-}
-
-/**
  * animations
  */
 @keyframes cloud-animation-1 {
@@ -542,14 +310,14 @@ time {
   display: table;
   margin: 0 auto 1rem;
   text-align: center;
-  color: #999;
+  color: #b2ebf2;
 }
 .not-found > i.material-icons {
   position: relative;
 }
 .not-found > i.material-icons:nth-of-type(1),
 .not-found > i.material-icons:nth-of-type(2) {
-  color: #e9e9e9;
+  color: #b2ebf2;
 }
 .not-found > i.material-icons:nth-of-type(1) {
   -webkit-transform: translate(80%, 20%);
@@ -810,12 +578,34 @@ table.invoice tfoot > tr {
   background-position: right center;
 }
 
+/**
+ * action bar
+ */
+.action-bar {
+  position: relative;
+  margin: 0 0 2rem;
+}
+.action-bar.action-bar-half {
+  z-index: 10;
+  bottom: -24px;
+}
+
 .card {
   margin: 0 0 1rem;
 }
 
+.card.with-bg {
+  background-image: url('../img/card-bg-2.svg');
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: 100% 172px;
+}
+.card.with-bg > .card-tabs > .tabs {
+  background-color: transparent;
+}
+
 .card .card-title {
-  margin: 0;
+  margin: 0 !important;
 }
 .card .card-title.card-title-small {
   font-size: 20px;
@@ -1099,7 +889,7 @@ body.module-search-active > .search-wrapper {
  * fast menu
  */
 .fast-menu {
-  margin-bottom: 12px;
+  margin: 0 0 1rem;
 
   display: -ms-flexbox;
   display: flex;
@@ -1109,18 +899,24 @@ body.module-search-active > .search-wrapper {
 
   -ms-flex-pack: justify;
   justify-content: space-between;
-}
-.fast-menu > a.card-panel {
-  margin: .4rem;
-}
-.fast-menu > a.card-panel > img {
-  max-width: 64px;
-}
 
-@media (max-width: 1024px) {
-  .fast-menu > a.card-panel > img {
-    max-width: 24px;
-  }
+  border-radius: 0 0 1rem 1rem;
+}
+.fast-menu > a {
+  margin: .4rem;
+
+      flex: 1 1 auto !important;
+  -ms-flex: 1 1 auto !important;
+
+  text-align: center;
+
+  padding: 2.5rem 1rem;
+  border-radius: 1rem;
+
+  background-color: #fff;
+}
+.fast-menu > a > .material-icons {
+  font-size: 32px;
 }
 
 /**
@@ -1222,12 +1018,10 @@ ul.partners > li.partner a:hover {
  */
 main {
   padding: 1rem 0;
-
-  background-image: url(../img/main_bg.jpg);
-  background-repeat: repeat;
-  background-attachment: scroll;
-
-  background-color: #ccc;
+  background-image: url(../img/bg-3.svg);
+  background-repeat: no-repeat;
+  background-size: 75%;
+  background-position: top right;
 }
 
 /**
@@ -1235,10 +1029,6 @@ main {
  */
 footer.page-footer {
   background-color: #e9e9e9;
-  background-image: url(../img/bg-1.svg);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
 }
 footer.page-footer > .container > .row > .col > img#vz-logo {
   max-width: 128px;
@@ -1323,8 +1113,8 @@ header#main > .parallax-container > .parallax > video#background-video {
 }
 
 #dock-content > .menu > .collection > a.collection-item.active {
-          box-shadow: inset 1rem 0 0 0 #009688 !important;
-  -webkit-box-shadow: inset 1rem 0 0 0 #009688 !important;
+          box-shadow: inset 1rem 0 0 0 #0097a7 !important;
+  -webkit-box-shadow: inset 1rem 0 0 0 #0097a7 !important;
 
   background-color: transparent;
 }
@@ -1582,18 +1372,8 @@ header#main > .parallax-container > .parallax > video#background-video {
   position: relative;
   padding: 32px 32px 0;
   margin-bottom: 8px;
-  height: 181px;
-}
-
-.sidenav .user-view .background {
-  overflow: hidden;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: -1;
-
+  height: 182px;
+  background-image: url('../img/sunset.png');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -1679,6 +1459,7 @@ nav .nav-wrapper > ul > li {
 nav .nav-wrapper > ul > li > a,
 nav .nav-wrapper > ul > li > a > i {
   line-height: 64px;
+  color: #666;
 }
 
 @media only screen and (max-width: 601px) {
@@ -1748,10 +1529,7 @@ nav .nav-wrapper > ul > li > a > i {
   margin: 0;
   background-color: transparent;
   border-width: 0;
-}
-
-.collection > .collection-item.active{
-  color: #009688;
+  color: #666 !important;
 }
 
 .collection > .collection-item > i.material-icons {
@@ -1876,17 +1654,22 @@ table tr {
 .modal {
   overflow-y: hidden;
   max-height: 100% !important;
-  background-color: transparent;
+  background-color: #fff;
+}
+.modal.with-bg {
+  background-image: url('../img/modal-bg.svg');
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: cover;
+  background-color: #fff;
 }
 .modal .modal-content {
   padding: 0;
-
-  background-color: #fff;
 }
 .modal .modal-content > .modal-title {
-  padding: 24px 24px 12px 24px;
-  font-size: 22px;
-  color: #999;
+  padding: 2rem 2rem 1rem;
+  font-size: 18px;
+  color: #fff;
 }
 .modal .modal-content > .modal-title:empty,
 .modal .modal-content > .modal-footer:empty {
@@ -1896,17 +1679,18 @@ table tr {
   overflow-y: auto;
   overflow-x: hidden;
   max-height: 400px;
-  margin: 0;
-  padding: 24px 32px;
-
+  margin: 0 0 0 1rem;
+  padding: 1rem 2rem;
   background-color: #fff;
-
-  border-width: 1px 0;
-  border-color: #f0f0f0;
-  border-style: solid;
+  border-radius: 2rem 0 0 2rem !important;
 }
 .modal .modal-content > .modal-footer {
-  padding: 12px 24px;
+  margin: 2rem 0 0;
+  padding: 1rem 2rem;
+  border-radius: 0 2rem 0 0 !important;
+  width: auto;
+  display: table;
+  background-color: #fff;
 }
 
 .modal.modal-small {
@@ -1956,9 +1740,28 @@ ul#slide-out li > a > span.badge {
 /**
  * box-shadow
  */
+.z-depth-1,
+nav,
+.card-panel,
+.card,
+.toast,
+.dropdown-content,
 .sidenav {
-          box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
-  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .10), 0 3px 1px -2px rgba(0, 0, 0, .08), 0 1px 5px 0 rgba(0, 0, 0, .1);
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .10), 0 3px 1px -2px rgba(0, 0, 0, .08), 0 1px 5px 0 rgba(0, 0, 0, .1);
+}
+
+/*!
+ * Waves v0.6.0
+ * http://fian.my.id/Waves
+ *
+ * Copyright 2014 Alfiana E. Sibuea and other contributors
+ * Released under the MIT license
+ * https://github.com/fians/Waves/blob/master/LICENSE
+ */
+.waves-effect {
+          transition: .1s ease-out;
+  -webkit-transition: .1s ease-out;
 }
 
 /**
@@ -2051,6 +1854,45 @@ th {
 }
 
 /**
+ * nav half
+ */
+nav.nav-half {
+  background-color: transparent;
+
+          box-shadow: none;
+  -webkit-box-shadow: none;
+}
+
+/**
+ * search field
+ */
+.input-field input[type=search] {
+  background-color: transparent;
+
+  margin: 0 1rem;
+
+  border-radius: 2rem;
+}
+.nav-wrapper .input-field input[type=search] {
+  padding-left: 3rem;
+  width: calc(100% - 5rem);
+}
+.input-field input[type=search] + .label-icon {
+  left: 0;
+  padding: 0 0 0 2rem;
+}
+.input-field input[type=search] + .label-icon > .material-icons {
+  color: #666;
+}
+.input-field input[type=search] ~ .mdi-navigation-close,
+.input-field input[type=search] ~ .material-icons {
+  right: 2rem;
+}
+.nav-wrapper .input-field input[type=search]:focus {
+  background-color: rgba(0, 0, 0, .1);
+}
+
+/**
  * pagination
  */
 .pagination.pagination-in {
@@ -2081,4 +1923,236 @@ th {
   position: absolute;
   right: 0;
   float: none;
+}
+
+/**
+ * displays
+ */
+.d-none {
+  display: none !important;
+}
+
+.d-inline {
+  display: inline !important;
+}
+
+.d-inline-block {
+  display: inline-block !important;
+}
+
+.d-block {
+  display: block !important;
+}
+
+.d-table {
+  display: table !important;
+}
+
+.d-table-row {
+  display: table-row !important;
+}
+
+.d-table-cell {
+  display: table-cell !important;
+}
+
+.d-flex {
+  display: -ms-flexbox !important;
+  display: flex !important;
+}
+
+.flex-fill {
+  -ms-flex: 1 1 auto !important;
+  flex: 1 1 auto !important;
+}
+
+.flex-wrap {
+  -ms-flex-wrap: wrap !important;
+  flex-wrap: wrap !important;
+}
+
+.flex-nowrap {
+  -ms-flex-wrap: nowrap !important;
+  flex-wrap: nowrap !important;
+}
+
+.flex-column {
+  -ms-flex-direction: column !important;
+  flex-direction: column !important;
+}
+
+.d-inline-flex {
+  display: -ms-inline-flexbox !important;
+  display: inline-flex !important;
+}
+
+.justify-content-start {
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+}
+
+.justify-content-end {
+    -ms-flex-pack: end;
+    justify-content: flex-end;
+}
+
+.justify-content-center {
+    -ms-flex-pack: center;
+    justify-content: center;
+}
+
+.justify-content-between {
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+}
+
+.justify-content-around {
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+}
+
+.align-self-center {
+  -ms-flex-item-align: center !important;
+  align-self: center !important;
+}
+
+.align-items-end {
+    -ms-flex-align: end;
+    align-items: flex-end;
+}
+
+.ml-auto,
+.mx-auto {
+  margin-left: auto;
+}
+
+.mr-auto,
+.mx-auto {
+  margin-right: auto;
+}
+
+.m-0 {
+  margin: 0;
+}
+
+.mb-0 {
+  margin-bottom: 0 !important;
+}
+.mb-1 {
+  margin-bottom: 1rem !important;
+}
+.mb-2 {
+  margin-bottom: 2rem !important;
+}
+
+.mt-0 {
+  margin-top: 0 !important;
+}
+.mt-1 {
+  margin-top: 1rem !important;
+}
+.mt-2 {
+  margin-top: 2rem !important;
+}
+
+.ml-0 {
+  margin-left: 0 !important;
+}
+.ml-1 {
+  margin-left: 1rem !important;
+}
+.ml-2 {
+  margin-left: 2rem !important;
+}
+
+.mr-0 {
+  margin-right: 0 !important;
+}
+.mr-1 {
+  margin-right: 1rem !important;
+}
+.mr-2 {
+  margin-right: 2rem !important;
+}
+
+.p-0 {
+  padding: 0 !important;
+}
+.p-1 {
+  padding: 1rem !important;
+}
+.p-2 {
+  padding: 2rem !important;
+}
+
+.pb-0 {
+  padding-bottom: 0 !important;
+}
+.pb-1 {
+  padding-bottom: 1rem !important;
+}
+.pb-2 {
+  padding-bottom: 2rem !important;
+}
+
+.pt-0 {
+  padding-top: 0 !important;
+}
+.pt-1 {
+  padding-top: 1rem !important;
+}
+.pt-2 {
+  padding-top: 2rem !important;
+}
+
+.pl-0 {
+  padding-left: 0 !important;
+}
+.pl-1 {
+  padding-left: 1rem !important;
+}
+.pl-2 {
+  padding-left: 2rem !important;
+}
+
+.pr-0 {
+  padding-right: 0 !important;
+}
+.pr-1 {
+  padding-right: 1rem !important;
+}
+.pr-2 {
+  padding-right: 2rem !important;
+}
+
+.rounded {
+  border-radius: 0.25rem;
+}
+
+.rounded-top {
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+}
+
+.rounded-right {
+  border-top-right-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
+}
+
+.rounded-bottom {
+  border-bottom-right-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+}
+
+.rounded-left {
+  border-top-left-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+}
+
+.rounded-circle {
+  border-radius: 50%;
+}
+
+.rounded-0 {
+  border-radius: 0 !important;
 }
